[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }

serde_json = "1.0.91"
rmp-serde = "1.1.1"

processing = { git = "https://bitbucket.org/Kapot/numass-processing.git", tag = "0.1.3" }
protobuf = "3.2.0"
natord = "1.0.9"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

tokio = { version = "1.21.2", features = ["full"] }
dataforge = { git = "https://bitbucket.org/Kapot/dataforge-parser-rust.git", tag = "0.1.3", features = ["tokio"]  }

actix-web = "4.3.0"
actix-files = "0.6.2"
mime = "0.3.16"

md5 = "0.7.0"
hex = "0.4.3"

clap = { version = "4.1.4", features = ["derive"]}

[patch."https://bitbucket.org/Kapot/dataforge-parser-rust.git"]
dataforge = { path = "../dataforge-parser-rust" }

[patch."https://bitbucket.org/Kapot/numass-processing.git"]
processing = { path = "../numass-processing" }

